--- a/components/popup/src/vwc-popup.scss
+++ b/components/popup/src/vwc-popup.scss
@@ -10,30 +10,56 @@
 .popup {
 	position: absolute; // element must have position: absolute already applied before computePosition() is called, so that its dimensions are read correctly.
 	display: none;
-	min-width: var(#{popup-variables.$popup-min-inline-size}, 50px);
-	max-width: var(#{popup-variables.$popup-max-inline-size}, 350px);
 	background-color: var(#{scheme-variables.$vvd-color-canvas});
 	border-radius: 6px;
 	color: var(#{scheme-variables.$vvd-color-on-canvas});
-	//TODO: (For Rachel) add elevation options
+	contain: layout;
 	filter: var(--vvd-shadow-surface-2dp);
 
-	&.popup-open {
+	&-open {
 		display: inline-grid;
 	}
 
-	&.popup-arrow {
-		//TODO: (For Rachel) update arrow design
-		$arrow-size: 8px;
-		position: absolute;
-		width: $arrow-size;
-		height: $arrow-size;
-		background: inherit;
-	}
-
-	&.popup-dismissible {
+	&-dismissible {
 		align-content: start;
 		align-items: flex-start;
 		grid-template-columns: 1fr auto;
+	}
+	&-dismissible-button {
+		align-self: flex-start;
+		margin: 0.125rem;
+	}
+}
+
+
+.popup-arrow {
+	visibility: hidden;
+	&::before {
+		z-index: -1;
+		content: '';
+		transform: rotate(45deg);
+		visibility: visible;
+
+	}
+}
+.popup-arrow,
+.popup-arrow::before {
+	$arrow-size: 8px;
+	position: absolute;
+	width: $arrow-size;
+	height: $arrow-size;
+	background: inherit;
+}
+
+$tail-position: (
+	top: bottom,
+	bottom: top,
+	left: right,
+	right: left,
+);
+
+@each $key, $value in $tail-position {
+	.popup-arrow[data-placement^=#{$key}] {
+		#{$value}: -4px;
 	}
 }
