--- a/components/switch/src/vwc-switch.scss
+++ b/components/switch/src/vwc-switch.scss
@@ -6,12 +6,26 @@
 );
 @use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 
+:host {
+	//css variables
+	--basic-nobe-size: 12px;
+	--translate: 16px;
+	--translate-natural: -16px;
+	--natural-50: #757575;
+	--natural-70: #4d4d4d;
+	--surface: #fff;
+
+	contain: content;
+}
+
 .mdc-switch {
 	--mdc-theme-secondary: var(#{connotation.$vvd-color-connotation});
 
-	--vvd-switch-unchecked-background: var(#{scheme-variables.$vvd-color-neutral});
+	//--vvd-switch-unchecked-background: var(#{scheme-variables.$vvd-color-neutral});
+	--vvd-switch-unchecked-background: trasparent;
 	--vvd-switch-unchecked-background-hover: var(#{scheme-variables.$vvd-color-neutral});
 	--vvd-switch-unchecked-background-focus: var(#{scheme-variables.$vvd-color-neutral});
+
 
 	--vvd-switch-disabled-background: var(#{scheme-variables.$vvd-color-neutral-30});
 	--vvd-switch-shadow-focus: 0, 0, 0, 0.5;
@@ -20,119 +34,130 @@
 	--mdc-theme-on-surface: var(--vvd-switch-unchecked-background); // unchecked track
 
 	@include connotation.connotation;
-}
 
-:host {
-	border-radius: 16px;
-
-	.mdc-switch,
-	.mdc-switch__native-control {
-		width: 30px;
-		height: 20px;
-	}
-
-	.mdc-switch__track {
-		width: 100%;
-		height: 100%;
-		border-width: 0;
-		border-radius: 16px;
-	}
-
-	.mdc-switch__thumb-underlay {
-		top: 0;
-		left: 0;
-		width: 20px;
-		height: 100%;
-
+	&.mdc-switch--checked {
 		.mdc-switch__thumb {
-			width: 16px;
-			height: 16px;
-			border: 0 none;
+			--basic-nobe-size: 14px;
+			background-color: var(--surface);
 		}
-	}
-
-	.mdc-switch--checked {
 		.mdc-switch__thumb-underlay {
-			transform: translateX(10px);
+			transform: translateX(var(--translate));
 		}
 
 		.mdc-switch__native-control {
-			transform: translateX(-10px);
+			transform: translateX(var(--translate-natural));
+		}
+	}
+	//:(not) is needed to overide mdc style
+	&:not(.mdc-switch--checked) {
+		.mdc-switch__track {
+			border: 1px solid var(--natural-50);
+		}
+
+		.mdc-switch__thumb {
+			background-color: var(--natural-50);
+		}
+
+		&:hover {
+			.mdc-switch__thumb {
+				background-color: var(--natural-70);
+			}
+			.mdc-switch__track {
+				border-color: var(--natural-70);
+			}
 		}
 	}
 
-	.mdc-switch {
-		.mdc-switch__thumb {
-			box-shadow: none;
+	&:not(.connotation-cta, .connotation-success, .connotation-alert, .mdc-switch--disabled) {
+		&.mdc-switch--checked {
+			.mdc-switch__thumb {
+				background-color: var(#{scheme-variables.$vvd-color-neutral-20});
+			}
 		}
+	}
 
-		&.mdc-switch--checked .mdc-switch__thumb {
-			background-color: var(#{scheme-variables.$vvd-color-neutral-10});
-		}
 
-		&:hover .mdc-switch__thumb {
-			opacity: 0.8;
-		}
+	.mdc-switch__track,
+	&.mdc-switch--checked .mdc-switch__track {
+		opacity: initial;
+	}
 
-		.mdc-switch__track,
-		&.mdc-switch--checked .mdc-switch__track {
+	&.mdc-switch--disabled {
+		opacity: initial;
+		.mdc-switch__track {
 			opacity: initial;
 		}
 
-		&:not(.mdc-switch--checked):hover .mdc-switch__track {
-			background-color: var(--vvd-switch-unchecked-background-hover);
-		}
-
-		&.mdc-switch--disabled {
-			opacity: initial;
-
+		&.mdc-switch--checked {
 			.mdc-switch__track {
 				background-color: var(--vvd-switch-disabled-background);
-				opacity: initial;
+			}
+			.mdc-switch__thumb {
+				background-color: var(#{scheme-variables.$vvd-color-neutral-20});
+			}
+		}
+
+		&:not(.mdc-switch--checked) {
+			.mdc-switch__track {
+				border-color: var(--vvd-switch-disabled-background);
+			}
+			.mdc-switch__thumb {
+				background-color: var(--vvd-switch-disabled-background);
 			}
 		}
 	}
 }
 
+
+
+.mdc-switch,
+.mdc-switch__native-control {
+	width: 36px;
+	height: 20px;
+}
+
+.mdc-switch__track {
+	width: 100%;
+	height: 100%;
+	border-width: 0;
+	border-radius: 16px;
+}
+
+.mdc-switch__thumb-underlay {
+	top: 0;
+	left: 0;
+	width: 20px;
+	height: 100%;
+
+	.mdc-switch__thumb {
+		--nobe-size: var(--basic-nobe-size);
+		width: var(--nobe-size);
+		height: var(--nobe-size);
+		border: 0;
+		box-shadow: none;
+	}
+}
+
 :host([enlarged]) {
+	--translate: 28px;
+	--translate-natural: -28px;
+	--basic-nobe-size: 24px;
 	.mdc-switch,
 	.mdc-switch__native-control {
-		width: 50px;
+		width: 60px;
 		height: 32px;
 	}
 
-	.mdc-switch__thumb-underlay {
-		width: 32px;
-
-		.mdc-switch__thumb {
-			width: 24px;
-			height: 24px;
+	.mdc-switch {
+		&__thumb-underlay {
+			width: 32px;
 		}
-	}
-
-	.mdc-switch--checked {
-		.mdc-switch__thumb-underlay {
-			transform: translateX(18px);
-		}
-
-		.mdc-switch__native-control {
-			transform: translateX(-18px);
+		&.mdc-switch--checked {
+			.mdc-switch__thumb {
+				--basic-nobe-size: 26px;
+			}
 		}
 	}
 }
 
-:host(:not([disabled]):focus-within) {
-	.mdc-switch__track {
-		box-shadow: 0 0 2px 1px rgba(var(--vvd-switch-shadow-focus));
-	}
 
-	.mdc-switch:not(.mdc-switch--checked) {
-		.mdc-switch__track {
-			background-color: var(--vvd-switch-unchecked-background-focus);
-		}
-
-		&:hover .mdc-switch__track {
-			background-color: var(--vvd-switch-unchecked-background-hover);
-		}
-	}
-}
