--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -40,7 +40,7 @@
 	--mdc-button-outline-color: var(#{layout.$vvd-layout-color-outline}, var(--mdc-theme-primary));
 	--mdc-button-horizontal-padding: 16px;
 	--button-block-size: 40px;
-	$gutter: 8px;
+	--gutter: 8px;
 
 	@include vvd-formfield.coupling;
 	@include connotation.connotation;
@@ -67,32 +67,20 @@
 
 	> .trailing-icon {
 		vwc-icon {
-			margin-inline-start: $gutter;
+			margin-inline-start: var(--gutter);
 		}
 	}
 
 	> .leading-icon {
 		vwc-icon {
-			margin-inline-end: $gutter;
+			margin-inline-end: var(--gutter);
 		}
 	}
 
 	/* stylelint-disable-next-line order/order -- variants */
 	@include size(dense, 4);
 	@include size(enlarged, 6) {
-		$gutter: 10px;
-
-		> .trailing-icon {
-			vwc-icon {
-				margin-inline-start: $gutter;
-			}
-		}
-
-		> .leading-icon {
-			vwc-icon {
-				margin-inline-end: $gutter;
-			}
-		}
+		--gutter: 10px;
 	}
 
 	:host([raised]) &,
@@ -117,6 +105,32 @@
 	:host([enlarged]) & {
 		--mdc-button-horizontal-padding: 20px;
 	}
+
+	:host([stacked][enlarged]) & {
+		--button-block-size: 80px;
+	}
+
+	:host([stacked][dense]) & {
+		--button-block-size: 56px;
+	}
+
+	&.button-stacked {
+		flex-direction: column;
+
+		> .leading-icon vwc-icon,
+		.leading-icon ::slotted(*) {
+			margin-block-end: 0.5rem;
+		}
+		> .trailing-icon vwc-icon,
+		.trailing-icon ::slotted(*) {
+			margin-block-start: 0.5rem;
+		}
+		.trailing-icon ::slotted(*),
+		.leading-icon ::slotted(*) {
+			margin-right: 0;
+			margin-left: 0;
+		}
+	}
 }
 
 @include shape-mixins.shape(
@@ -126,6 +140,16 @@
 	)
 );
 
-.mdc-button.button-stacked {
-	flex-direction: column;
+
+
+:host([stacked]) {
+	.mdc-button {
+		--button-block-size: 68px;
+	}
+	.mdc-button > .leading-icon vwc-icon,
+	.mdc-button > .trailing-icon vwc-icon {
+		--gutter: 0;
+
+	}
 }
+
