--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -1,4 +1,3 @@
-
 @forward './vwc-button-coupling';
 @use './vwc-button-variables' as button-variables;
 @use '@vonage/vwc-icon/src/partials/vwc-icon-variables' as icon-variables;
@@ -10,9 +9,12 @@
 	$default: primary,
 );
 @use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
-@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with(
-	$variable-name: --vvd-button-shape
-);
+@use '@vonage/vvd-foundation/scss/mixins/shape-mixins'
+
+	with
+(
+$variable-name: --vvd-button-shape)
+;
 @use '@vonage/vvd-foundation/scss/mixins/layout/config' as layout-config with (
 	$layout-set: filled outlined ghost,
 	$default: ghost,
@@ -40,7 +42,6 @@
 	--mdc-button-outline-color: var(#{layout.$vvd-layout-color-outline}, var(--mdc-theme-primary));
 	--mdc-button-horizontal-padding: 16px;
 	--button-block-size: 40px;
-	--gutter: 8px;
 
 	@include vvd-formfield.coupling;
 	@include connotation.connotation;
@@ -65,9 +66,18 @@
 		display: flex;
 	}
 
-	> .trailing-icon {
+	> .trailing-icon,
+	> .leading-icon {
 		vwc-icon {
-			margin-inline-start: var(--gutter);
+			--gutter: 8px;
+
+			:host([enlarged]) & {
+				--gutter: 10px;
+			}
+
+			:host([stacked]) & {
+				--gutter: 0;
+			}
 		}
 	}
 
@@ -77,11 +87,15 @@
 		}
 	}
 
+	> .trailing-icon {
+		vwc-icon {
+			margin-inline-start: var(--gutter);
+		}
+	}
+
 	/* stylelint-disable-next-line order/order -- variants */
 	@include size(dense, 4);
-	@include size(enlarged, 6) {
-		--gutter: 10px;
-	}
+	@include size(enlarged, 6);
 
 	:host([raised]) &,
 	:host([unelevated]) & {
@@ -106,29 +120,33 @@
 		--mdc-button-horizontal-padding: 20px;
 	}
 
-	:host([stacked][enlarged]) & {
-		--button-block-size: 80px;
-	}
-
-	:host([stacked][dense]) & {
-		--button-block-size: 56px;
-	}
-
 	&.button-stacked {
+		--button-block-size: 68px;
 		flex-direction: column;
+		line-height: normal;
+
+		:host([enlarged]) & {
+			--button-block-size: 80px;
+		}
+
+		:host([dense]) & {
+			--button-block-size: 56px;
+		}
 
 		> .leading-icon vwc-icon,
 		.leading-icon ::slotted(*) {
 			margin-block-end: 0.5rem;
 		}
+
 		> .trailing-icon vwc-icon,
 		.trailing-icon ::slotted(*) {
 			margin-block-start: 0.5rem;
 		}
+
 		.trailing-icon ::slotted(*),
 		.leading-icon ::slotted(*) {
-			margin-right: 0;
-			margin-left: 0;
+			margin-inline-end: 0;
+			margin-inline-start: 0;
 		}
 	}
 }
@@ -139,17 +157,3 @@
 		pill: 24px,
 	)
 );
-
-
-
-:host([stacked]) {
-	.mdc-button {
-		--button-block-size: 68px;
-	}
-	.mdc-button > .leading-icon vwc-icon,
-	.mdc-button > .trailing-icon vwc-icon {
-		--gutter: 0;
-
-	}
-}
-
