--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -10,8 +10,8 @@
 );
 @use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with (
-	$variable-name: --vvd-button-shape)
-;
+	$variable-name: --vvd-button-shape
+);
 @use '@vonage/vvd-foundation/scss/mixins/layout/config' as layout-config with (
 	$layout-set: filled outlined ghost,
 	$default: ghost,
