--- a/components/radio/src/vwc-radio.scss
+++ b/components/radio/src/vwc-radio.scss
@@ -1,7 +1,7 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/_scheme-variables' as scheme-variables;
 
 :host {
-	--mdc-radio-unchecked-color: var(#{scheme-variables.$vvd-color-on-canvas});
+	--mdc-radio-unchecked-color: var(#{scheme-variables.$vvd-color-neutral-70});
 	--mdc-radio-disabled-color: var(#{scheme-variables.$vvd-color-neutral-30});
 }
 
@@ -21,8 +21,8 @@
 	.mdc-radio__native-control:enabled {
 		&:hover,
 		&:focus {
-			+ .mdc-radio__background .mdc-radio__outer-circle {
-				box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+			~ .mdc-radio__background .mdc-radio__outer-circle {
+				--mdc-radio-unchecked-color: var(#{scheme-variables.$vvd-color-on-canvas});
 			}
 		}
 	}
