code review fix & elevation fix

--- a/components/popup/src/vwc-popup.scss
+++ b/components/popup/src/vwc-popup.scss
@@ -8,14 +8,13 @@
 }
 
 .popup {
-	--border-size: 6px;
+	--border-radius-size: 6px;
 	position: absolute;
 	display: none;
 	width: min-content;
 	background-color: var(#{scheme-variables.$vvd-color-surface-4dp});
-	border-radius: var(--border-size);
+	border-radius: var(--border-radius-size);
 	contain: layout;
-	//filter: var(#{scheme-variables.$vvd-shadow-surface-4dp});
 
 	&-arrow {
 		position: absolute;
@@ -43,5 +42,5 @@
 }
 
 ::slotted(*) {
-	border-radius: var(--border-size);
+	border-radius: var(--border-radius-size);
 }
