fix(elevation): remove containment

--- a/components/elevation/src/vwc-elevation.scss
+++ b/components/elevation/src/vwc-elevation.scss
@@ -28,5 +28,8 @@ $vvd-elevation-border-radius: --vvd-elevation-border-radius;
 .vwc-elevation {
 	width: fit-content;
 	border-radius: var(#{$vvd-elevation-border-radius}, 6px);
-	contain: content;
+}
+
+::slotted(*) {
+	border-radius: var(#{$vvd-elevation-border-radius}, 6px);
 }
