--- a/components/switch/src/partials/_vwc-switch-variables.scss
+++ b/components/switch/src/partials/_vwc-switch-variables.scss
@@ -2,3 +2,8 @@
 $switch-default-color: #757575;
 $switch-surface: #f2f2f2;
 
+//switch sizes
+$basic-knob-size: --basic-knob-size;
+$knob-translate: --knob-translate;
+$knob-translate-natural: --knob-translate-natural;
+$knob-size: --knob-size;
