--- a/components/switch/src/partials/_vwc-switch-variables.scss
+++ b/components/switch/src/partials/_vwc-switch-variables.scss
@@ -3,6 +3,5 @@ $switch-default-color: #757575;
 $switch-surface: #f2f2f2;
 
 //switch sizes
-$knob-translate: --knob-translate;
-$knob-translate-natural: --knob-translate-natural;
+$knob-translate-x: --knob-translate-x;
 $knob-size: --knob-size;
