--- a/common/foundation/scss/mixins/layout/_mixins.scss
+++ b/common/foundation/scss/mixins/layout/_mixins.scss
@@ -23,10 +23,11 @@ $all-layouts: (
 
 %outlined {
 	#{variables.$vvd-layout-color-fill}: transparent;
-	#{variables.$vvd-layout-color-outline}: var(#{connotation.$vvd-color-connotation}-diverse);
 	@if (config.$outline-duotone) {
+		#{variables.$vvd-layout-color-outline}: var(#{connotation.$vvd-color-connotation});
 		#{variables.$vvd-layout-color-text}: var(#{connotation.$vvd-color-connotation}-contrast);
 	} @else {
+		#{variables.$vvd-layout-color-outline}: var(#{connotation.$vvd-color-connotation}-diverse);
 		#{variables.$vvd-layout-color-text}: var(#{connotation.$vvd-color-connotation}-diverse);
 	}
 }
